Bug 457474 - NeoChat prompting for slash commands in the middle of a message
Summary: NeoChat prompting for slash commands in the middle of a message
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-04 10:26 UTC by Jan Bidler
Modified: 2022-09-22 15:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bidler 2022-08-04 10:26:01 UTC
SUMMARY
When using slashes in the middle of a message, neochat thinks that the user is trying to input a slash command.


STEPS TO REPRODUCE
1. Write something along the lines of `Hey, check out my favourite GNU / Linux distro!`

OBSERVED RESULT
After typing the slash, NeoChat prompts you with the command selection

EXPECTED RESULT
NeoChat should only prompt the command selection, if the slash is the first character in the message.

SOFTWARE/OS VERSIONS
Linux: Arch Linux
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.5
NeoChat: self compiled flatpak
Comment 1 Bug Janitor Service 2022-09-22 12:47:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/532
Comment 2 Tobias Fella 2022-09-22 15:12:00 UTC
Git commit 53b9f4239989b32aa73f84838b47e374ba690853 by Tobias Fella, on behalf of James Graham.
Committed on 22/09/2022 at 15:11.
Pushed by tfella into branch 'master'.

Fix Slash Commands in the Middle of a Message

Make sure that a slash command only activates when the slash is at the beginning of the message.

M  +1    -1    src/chatdocumenthandler.cpp

https://invent.kde.org/network/neochat/commit/53b9f4239989b32aa73f84838b47e374ba690853