Fix Slash Commands in the Middle of a Message

Make sure that a slash command only activates when the slash is at the beginning of the message.

BUG: 457474